--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,22 @@ android {
         applicationId "com.robert.myapplication"
         minSdkVersion 11
         targetSdkVersion 19
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.3"
+    }
+    signingConfigs {
+        release {
+            storeFile file("standgen-key.keystore")
+            storePassword "donkey"
+            keyAlias "alias_name"
+            keyPassword "donkey"
+        }
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -24,4 +33,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.+'
     compile files('libs/jreddit-1.0.0.jar')
     compile files('libs/json-simple-1.1.1.jar')
+    compile files('libs/libGoogleAnalyticsServices.jar')
 }
