--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ Thumbs.db
 # Android Studio
 .idea
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
-.gradle
+*.gradle
 build/
